<resources>
    <string name="app_name">Soccer Check</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="empty_list_fixtures">No Fixtures Found</string>
    <string name="empty_list_competitions">No Competitions Found</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="loading">Loading</string>

    <string name="champions_league">UEFA Champions League</string>
    <string name="la_liga">Primera División</string>
    <string name="serie_A">Serie A</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premiere_league">Premiere League</string>
    <string name="title_activity_soccer_main">SoccerActivityMain</string>

    <string name="title_tab_competition">League</string>
    <string name="title_tab_league_table">Table</string>
    <string name="title_tab_fixtures_list">Fixtures</string>


    <!-- Competition Info Label -->
    <string name="competition_info_number_games_label">Number of Games: </string>
    <string name="competition_info_number_teams_label">Number of Teams: </string>
    <string name="competition_info_number_matchdays_label">Number Match Days: </string>

    <!-- League Table Label -->
    <string name="position">Position</string>
    <string name="teamName">Team</string>
    <string name="playedGames">Games</string>
    <string name="points">Points</string>
    <string name="goals">Goals</string>
    <string name="goalsAgainst">Goals Against</string>
    <string name="goalDifference">Goal Difference</string>
    <string name="wins">Wins</string>
    <string name="draws">Draws</string>
    <string name="losses">Losses</string>

    <!-- Team Detail Label -->
    <string name="label_team_name">Name: </string>
    <string name="label_team_shortname">Shortname: </string>
    <string name="label_team_code">Team Code: </string>
    <string name="label_team_market_value">Market Value: </string>

    <!-- Player Detail Label -->
    <string name="label_Player_name">Name: </string>
    <string name="label_player_position">Position: </string>
    <string name="label_player_number">Player Number: </string>
    <string name="label_player_date_birth">Birth date: </string>
    <string name="label_player_nationality">Nationality: </string>
    <string name="label_player_contract_until">End Contract: </string>
    <string name="label_player_market_value">Market Value: </string>

    <!-- Champions League Table Label -->
    <string name="group">Group</string>
    <string name="rank">Rank</string>
    <string name="team">Team</string>
    <string name="playedGamesCL">Games</string>
    <string name="pointsCL">Points</string>
    <string name="goalsCL">Goals</string>
    <string name="goalsAgainstCL">Goals Against</string>
    <string name="goalDifferenceCL">Goal Difference</string>

    <!-- Buttons Team Detail Label -->
    <string name="label_button_team_players">Players</string>
    <string name="label_button_team_fixtures">Fixtures</string>

</resources>
