<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="43dp"
    android:orientation="vertical"
    android:id="@+id/response_league_table">

    <LinearLayout
        android:id="@+id/response_league_table_header"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="43dp">

        <TextView
            android:text="@string/group"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/textview_header_group"
            android:layout_weight="0.09"
            android:background="@drawable/row_header"
            android:gravity="center_vertical"
            style="@style/text_label_table"/>

        <TextView
            android:text="@string/rank"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/textview_header_rank"
            android:layout_weight="0.09"
            android:background="@drawable/row_header"
            android:gravity="center_vertical"
            style="@style/text_label_table"/>

        <TextView
            android:text="@string/team"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/textview_header_team"
            android:layout_weight="0.25"
            android:background="@drawable/row_header"
            android:gravity="center_vertical"
            style="@style/text_label_table"/>

        <TextView
            android:text="@string/playedGamesCL"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/textview_header_played_games_cl"
            android:layout_weight="0.09"
            android:background="@drawable/row_header"
            android:gravity="center_vertical"
            style="@style/text_label_table"/>

        <TextView
            android:text="@string/pointsCL"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/textview_header_points_cl"
            android:layout_weight="0.09"
            android:background="@drawable/row_header"
            android:gravity="center_vertical"
            style="@style/text_label_table"/>

    </LinearLayout>

</TableLayout>