<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_fragment_player_detail_soccer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/field"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/team_detail_border_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/id_image_player" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/label_player_number"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_number_label"
                android:textAlignment="textEnd"
                style="@style/text_label_player_detail"
                android:visibility="invisible"
                android:paddingTop="20dp"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_number"
                android:textAlignment="textStart"
                style="@style/text_label_player_detail"
                android:paddingLeft="@dimen/padding_text_left"
                android:paddingTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/label_Player_name"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:textAlignment="textEnd"
                style="@style/text_label_player_detail"
                android:id="@+id/textview_player_detail_name_label"
                android:visibility="invisible"
                android:paddingTop="20dp" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_name"
                android:paddingTop="20dp"
                android:textAlignment="textStart"
                style="@style/text_label_player_detail"
                android:paddingLeft="@dimen/padding_text_left"
                android:layout_toEndOf="@+id/textview_player_detail_name_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/label_player_position"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:textAlignment="textEnd"
                style="@style/text_label_player_detail"
                android:id="@+id/textview_player_detail_position_label"
                android:visibility="invisible"
                android:paddingTop="20dp" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_position"
                android:paddingTop="20dp"
                android:textAlignment="textStart"
                style="@style/text_label_player_detail"
                android:paddingLeft="@dimen/padding_text_left"
                android:layout_toEndOf="@+id/textview_player_detail_position_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/label_player_date_birth"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_date_birth_label"
                android:textAlignment="textEnd"
                style="@style/text_label_player_detail"
                android:visibility="invisible"
                android:paddingTop="20dp"
                android:layout_toStartOf="@+id/textview_player_detail_date_birth" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_date_birth"
                android:textAlignment="textStart"
                style="@style/text_label_player_detail"
                android:paddingLeft="@dimen/padding_text_left"
                android:paddingTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/label_player_nationality"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_nationality_label"
                android:textAlignment="textEnd"
                style="@style/text_label_player_detail"
                android:visibility="invisible"
                android:paddingTop="20dp"
                android:layout_toStartOf="@+id/textview_player_detail_nationality" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_nationality"
                android:textAlignment="textStart"
                style="@style/text_label_player_detail"
                android:paddingLeft="@dimen/padding_text_left"
                android:paddingTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/label_player_contract_until"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_contract_until_label"
                android:textAlignment="textEnd"
                style="@style/text_label_player_detail"
                android:visibility="invisible"
                android:paddingTop="20dp"
                android:layout_toStartOf="@+id/textview_player_detail_contract_until" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_contract_until"
                android:textAlignment="textStart"
                style="@style/text_label_player_detail"
                android:paddingLeft="@dimen/padding_text_left"
                android:paddingTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:text="@string/label_player_market_value"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_market_value_label"
                android:textAlignment="textEnd"
                style="@style/text_label_player_detail"
                android:visibility="invisible"
                android:paddingTop="20dp"
                android:layout_toStartOf="@+id/textview_player_detail_market_value" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:textColor="@color/text_color"
                android:id="@+id/textview_player_detail_market_value"
                android:textAlignment="textStart"
                style="@style/text_label_player_detail"
                android:paddingLeft="@dimen/padding_text_left"
                android:paddingTop="20dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
