<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_fragment_competitions_soccer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/field"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:background="@drawable/competition_info_border_color"
        android:id="@+id/linearlayout_competition_info_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/competition_name"
            android:textColor="@color/competition_info_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="19sp" />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/id_image_logo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/text_view_number_of_teams_label"
                    android:textColor="@color/competition_info_text_color"
                    android:text="@string/competition_info_number_teams_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/text_view_number_of_teams"
                    android:textColor="@color/competition_info_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dip"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/text_view_number_games_label"
                    android:textColor="@color/competition_info_text_color"
                    android:text="@string/competition_info_number_games_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/text_view_number_games"
                    android:textColor="@color/competition_info_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dip"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/text_view_number_of_match_days_label"
                    android:textColor="@color/competition_info_text_color"
                    android:text="@string/competition_info_number_matchdays_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/text_view_number_of_match_days"
                    android:textColor="@color/competition_info_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dip"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
